<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <include layout="@layout/common_view_title_bar" />

    <LinearLayout
        android:id="@+id/llRecordime"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/dp_10"
        android:paddingStart="@dimen/dp_10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/string_breakdown_record_time"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tvRecordTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#FFACABAB" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/dp_10"
        android:paddingStart="@dimen/dp_10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/string_breakdown_userid"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tvUserId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#FFACABAB" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/dp_10"
        android:paddingStart="@dimen/dp_10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/string_breakdown_trainSet_trips"
            android:textSize="@dimen/sp_16" />

        <Spinner
            android:id="@+id/spTrainSetTrips"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:entries="@array/TrainSetTrips"
            android:spinnerMode="dialog" />

        <EditText
            android:id="@+id/etTrainSetTrips"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:digits="@string/rule09"
            android:hint="@string/string_breakdown_trainSet_trips_hint"
            android:inputType="number"
            android:maxLines="1"
            android:maxWidth="@dimen/dp_80"
            android:minWidth="@dimen/dp_120"
            android:singleLine="true" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#FFACABAB" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/dp_10"
        android:paddingStart="@dimen/dp_10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/string_breakdown_trainSet_num"
            android:textSize="@dimen/sp_16" />

        <Spinner
            android:id="@+id/spTrainSetCodeNum"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:spinnerMode="dialog" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#FFACABAB" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/dp_10"
        android:paddingStart="@dimen/dp_10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/string_breakdown_source"
            android:textSize="@dimen/sp_16" />

        <Spinner
            android:id="@+id/spSource"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:entries="@array/Source"
            android:gravity="center"
            android:spinnerMode="dialog" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#FFACABAB" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btnSave"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:background="@drawable/tg_common_btn_blue_style"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/string_breakdown_save"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/sp_18" />
</LinearLayout>