<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFF2F4"
    android:orientation="vertical">

    <include layout="@layout/tg_common_view_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_160"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/tg_common_layout_admin_service_ivLogo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:src="@drawable/tg_common_ic_blank" />

        <ImageView
            android:id="@+id/tg_common_layout_admin_service_ivTitleLogo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_8"
            android:src="@drawable/tg_common_ic_blank" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/dp_25"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_weight="2"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ip_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_25"
                android:gravity="start"
                android:minWidth="@dimen/dp_35"
                android:text="@string/label_ip"
                android:textColor="#383838"
                android:textSize="@dimen/sp_17" />

            <View
                android:id="@+id/v_ip_line"
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_alignBottom="@id/ip_value"
                android:layout_alignTop="@id/ip_value"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_toEndOf="@id/ip_value"
                android:background="#EFF2F4" />

            <EditText
                android:id="@+id/et_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/ip_value"
                android:layout_alignTop="@id/ip_value"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_toEndOf="@id/v_ip_line"
                android:background="@null"
                android:gravity="start|bottom"
                android:hint="@string/hint_input_ip"
                android:textColor="#383838"
                android:textSize="@dimen/sp_17" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@id/et_ip"
                android:layout_marginTop="@dimen/dp_10"
                android:background="#EFF2F4" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_25">

            <TextView
                android:id="@+id/iv_port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_25"
                android:gravity="start"
                android:minWidth="@dimen/dp_35"
                android:text="@string/label_port"
                android:textColor="#383838"
                android:textSize="@dimen/sp_17" />

            <View
                android:id="@+id/v_port_line"
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_alignBottom="@id/iv_port"
                android:layout_alignTop="@id/iv_port"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_toRightOf="@id/iv_port"
                android:background="#EFF2F4" />

            <EditText
                android:id="@+id/et_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/iv_port"
                android:layout_alignTop="@id/iv_port"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_toRightOf="@id/v_port_line"
                android:background="@null"
                android:gravity="left|bottom"
                android:hint="@string/hint_input_port"
                android:inputType="number"
                android:textColor="#383838"
                android:textSize="@dimen/sp_17" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@id/et_port"
                android:layout_marginTop="@dimen/dp_10"
                android:background="#EFF2F4" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_commit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_35"
            android:background="@drawable/tg_common_btn_blue_style"
            android:text="@string/label_confirm"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/sp_18" />
    </LinearLayout>

    <TextView
        android:id="@+id/tg_common_layout_admin_service_tvContactName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:gravity="center_horizontal|bottom"
        android:text="@string/default_common_about_contact_name"
        android:textColor="@color/grey" />
</LinearLayout>